@@ -945,6 +945,8 @@ OpenXML_TRANSLATE_SLIDE_COMMENTS=&Slide Comments
 OpenXML_TRANSLATE_SLIDE_MASTERS=Sli&de Masters
 OpenXML_TRANSLATE_SLIDE_LAYOUTS=Slide &Layouts
 OpenXML_TRANSLATE_CHARTS=C&harts
+OpenXML_GENERIC_OPTIONS=Generic Options:
+OpenXML_AGGREGATE_TAGS=Aggregate Tags
 
 OpenXML_ERROR_IN_FILE=Error in file
 
