@@ -873,7 +873,7 @@ OpenDoc_ERROR_IN_FILE=Errore nel file
 
 OpenXML_FILTER_NAME=File Microsoft Open XML
 OpenXML_FILTER_OPTIONS=Opzioni filtro Open XML
-OpenXML_WORD=Parola
+OpenXML_WORD=Word
 OpenXML_TRANSLATE_HIDDEN_TEXT=&Testo nascosto
 OpenXML_TRANSLATE_COMMENTS=Co&mmenti
 OpenXML_TRANSLATE_FOOTNOTES=Note a &pi\u00e8 pagina
@@ -888,6 +888,8 @@ OpenXML_TRANSLATE_SLIDE_COMMENTS=Commenti &diapositiva
 OpenXML_TRANSLATE_SLIDE_MASTERS=&Master diapositiva
 OpenXML_TRANSLATE_SLIDE_LAYOUTS=&Layout diapositiva
 OpenXML_TRANSLATE_CHARTS=Gra&fici
+OpenXML_GENERIC_OPTIONS=Opzioni generiche:
+OpenXML_AGGREGATE_TAGS=Aggregazione dei tag
 
 OpenXML_ERROR_IN_FILE=Errore nel file
 
